feat(providers): add Chase File Import Provider (F7.2)
- Implement ChaseFileProvider with auth-agnostic ProviderProtocol
- Add QFX/OFX parser (ofxparse) and CSV parser (checking/credit card)
- Add ImportFromFile command handler with auto-account creation
- Add duplicate detection by FITID and balance snapshot capture
- Add POST /api/v1/imports endpoint with multipart form data
- Add FILE_IMPORT credential type and Chase provider seed
- Add 80+ tests (parsers, provider, handler, API)
- Update docs: chase-file-import.md, adding-new-providers.md
- Update provider-integration-architecture.md with all 3 provider types
- Add F7.7 Domain Events Compliance Audit to roadmap (deferred)
- Bump version to v1.4.0

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -155,6 +155,7 @@ nav:
     - Authentication Usage: guides/authentication-usage.md
     - Authorization Usage: guides/authorization-usage.md
     - Cache Usage: guides/cache-usage.md
+    - Chase File Import: guides/chase-file-import.md
     - Database Seeding: guides/database-seeding.md
     - Database Usage: guides/database-usage.md
     - Dependency Injection Usage: guides/dependency-injection-usage.md
