--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "dashtam"
-version = "1.3.0"
+version = "1.4.0"
 description = "A secure financial data aggregation platform built with hexagonal architecture, CQRS, and domain-driven design"
 requires-python = ">=3.13"
 dependencies = [
@@ -14,6 +14,7 @@ dependencies = [
     "fastapi>=0.118.0",
     "geoip2>=5.1.0",
     "httpx>=0.28.1",
+    "ofxparse>=0.21",
     "passlib[bcrypt]>=1.7.4",
     "psycopg[binary,pool]>=3.2.10",
     "pydantic-settings>=2.11.0",
