docs(architecture): add core architecture documentation
- Created hexagonal-architecture.md (1,451 lines): Complete hexagonal architecture theory including dependency rule, layer boundaries, ports & adapters pattern, benefits vs monolithic architecture, testing strategies, and integration with CQRS/DDD/Protocol patterns
- Created protocol-based-architecture.md (1,340 lines): Comprehensive Protocol pattern guide covering structural vs nominal typing, why Protocol over ABC, Protocol implementations across Dashtam (repositories, services, providers), testing with Protocols, mypy type checking, common pitfalls and solutions
- Created domain-driven-design-architecture.md (1,268 lines): Pragmatic DDD philosophy including what "pragmatic" means for Dashtam, DDD patterns used (entities, value objects, domain events, repositories), DDD patterns NOT used and why, integration with hexagonal/CQRS/Protocol/Event Registry, when to emit domain events, entity vs value object decision tree, domain vs application services boundary
- Updated directory-structure.md: Synchronized with v1.5.1 state including modularized container structure, complete event registry (69 events), and updated schemas section
- Updated docs/index.md: Reorganized Core Architecture section to highlight 5 core architectures
- Updated mkdocs.yml: Added 3 new architecture docs to navigation + fixed missing nav entries
- Updated WARP.md Section 21: Added cross-references to new architecture docs, fixed heading levels for markdown linting
- Updated Makefile: Added --remove-orphans flag to all docker compose up commands
- Updated CHANGELOG.md: Added v1.5.2 release entry
- Bumped version to 1.5.2 in pyproject.toml and updated uv.lock

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -126,7 +126,6 @@ plugins:
 # Navigation
 nav:
   - Home: index.md
-  - Code Reference: reference/
   - API Reference:
     - Account Operations: api/account-operations.md
     - Authentication: api/authentication.md
@@ -149,8 +148,11 @@ nav:
     - Dependency Injection: architecture/dependency-injection-architecture.md
     - Directory Structure: architecture/directory-structure.md
     - Domain Events: architecture/domain-events-architecture.md
+    - Domain-Driven Design: architecture/domain-driven-design-architecture.md
     - Error Handling: architecture/error-handling-architecture.md
+    - Hexagonal Architecture: architecture/hexagonal-architecture.md
     - Holding Domain: architecture/holding-domain-model.md
+    - Protocol-Based Architecture: architecture/protocol-based-architecture.md
     - Provider Domain: architecture/provider-domain-model.md
     - Provider Integration: architecture/provider-integration-architecture.md
     - Provider OAuth: architecture/provider-oauth-architecture.md
@@ -158,6 +160,7 @@ nav:
     - Registry Pattern: architecture/registry-pattern-architecture.md
     - Repository Pattern: architecture/repository-pattern.md
     - Secrets Management: architecture/secrets-management-architecture.md
+    - Session Management: architecture/session-management-architecture.md
     - Structured Logging: architecture/structured-logging-architecture.md
     - Testing: architecture/testing-architecture.md
     - Token Breach Rotation: architecture/token-breach-rotation-architecture.md
@@ -182,4 +185,6 @@ nav:
     - Local CI Testing: guides/local-ci-testing.md
     - Rate Limit Usage: guides/rate-limit-usage.md
     - Secrets Management Usage: guides/secrets-management-usage.md
+    - Session Management Usage: guides/session-management-usage.md
     - Structured Logging Usage: guides/structured-logging-usage.md
+  - Code Reference: reference/
