feat(provider): add provider integration registry
Implements F8.1 - Provider Integration Registry pattern for zero-drift
provider metadata management.

Added:
- src/domain/providers/registry.py (383 lines) - Single source of truth
  for all 3 providers (Schwab, Alpaca, Chase)
- ProviderMetadata dataclass with slug, display_name, category, auth_type,
  capabilities, required_settings
- ProviderCategory enum (6 types: BROKERAGE, BANK, CRYPTO, etc.)
- ProviderAuthType enum (5 types: OAUTH, API_KEY, FILE_IMPORT, etc.)
- 5 helper functions: get_provider_metadata, get_all_provider_slugs,
  get_oauth_providers, get_providers_by_category, get_statistics
- tests/unit/test_provider_registry_compliance.py (405 lines) - 19 tests
  with 100% registry coverage

Changed:
- src/core/container/providers.py - Registry-driven validation, removed
  manual OAUTH_PROVIDERS set, centralized settings validation
- Overall test count: 2190 → 2208 tests (+18)
- Overall coverage: 88% maintained

Documentation:
- docs/architecture/provider-registry-architecture.md (761 lines) - Complete
  registry pattern architecture with 7 sections
- docs/guides/adding-new-providers.md - Added Phase 0: Provider Registry
- docs/architecture/provider-integration-architecture.md - Added registry
  integration references
- docs/architecture/provider-domain-model.md - Updated metadata
- docs/index.md - Added Provider Registry reference
- mkdocs.yml - Added provider-registry-architecture.md to navigation
- CHANGELOG.md - Added v1.6.0 release notes

Benefits:
- Zero drift (discovered Alpaca missing from manual OAUTH_PROVIDERS)
- Single entry point for providers
- Centralized settings validation
- Auto-wiring for OAuth callbacks
- 30% code reduction in container
- Self-enforcing compliance tests

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -156,6 +156,7 @@ nav:
     - Provider Domain: architecture/provider-domain-model.md
     - Provider Integration: architecture/provider-integration-architecture.md
     - Provider OAuth: architecture/provider-oauth-architecture.md
+    - Provider Registry: architecture/provider-registry-architecture.md
     - Rate Limiting: architecture/rate-limit-architecture.md
     - Registry Pattern: architecture/registry-pattern-architecture.md
     - Repository Pattern: architecture/repository-pattern.md
