chore(deps): upgrade infrastructure to latest versions (v1.6.4)
- UV: 0.8.22 → 0.9.21
- PostgreSQL: 17.6 → 17.7
- Redis: 8.2.1 → 8.4
- FastAPI: 0.118.0 → 0.128.0

Fixed all mypy type errors (1,122 → 0), updated deprecated FastAPI
status codes, and ensured 100% mypy compliance for production code.

All 2,291 tests pass, 88% coverage maintained, zero breaking changes.

--- a/compose/docker-compose.ci.yml
+++ b/compose/docker-compose.ci.yml
@@ -17,7 +17,7 @@ name: dashtam-ci
 services:
   # PostgreSQL Database (CI) - Speed optimized
   postgres:
-    image: postgres:17.6-alpine3.22
+    image: postgres:17.7-alpine
     container_name: dashtam-ci-postgres
     env_file:
       - ../env/.env.ci
@@ -62,7 +62,7 @@ services:
 
   # Redis Cache (CI) - Ephemeral, no persistence
   redis:
-    image: redis:8.2.1-alpine3.22
+    image: redis:8.4-alpine
     container_name: dashtam-ci-redis
     env_file:
       - ../env/.env.ci
