--- a/compose/docker-compose.test.yml
+++ b/compose/docker-compose.test.yml
@@ -17,7 +17,7 @@ name: dashtam-test
 services:
   # PostgreSQL Database (Testing) - Ephemeral storage
   postgres:
-    image: postgres:17.6-alpine3.22
+    image: postgres:17.7-alpine
     container_name: dashtam-test-postgres
     env_file:
       - ../env/.env.test
@@ -36,7 +36,7 @@ services:
 
   # Redis Cache (Testing) - Ephemeral storage
   redis:
-    image: redis:8.2.1-alpine3.22
+    image: redis:8.4-alpine
     container_name: dashtam-test-redis
     env_file:
       - ../env/.env.test
