--- a/compose/docker-compose.dev.yml
+++ b/compose/docker-compose.dev.yml
@@ -1,10 +1,10 @@
-name: dashtam-dev
+name: dashtam-api-dev
 
 services:
   # PostgreSQL Database (Development)
   postgres:
     image: postgres:17.7-alpine
-    container_name: dashtam-dev-postgres
+    container_name: dashtam-api-dev-postgres
     env_file:
       - ../env/.env.dev
     ports:
@@ -17,12 +17,12 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - dashtam-dev-network
+      - dashtam-api-dev-network
 
   # Redis Cache (Development)
   redis:
     image: redis:8.4-alpine
-    container_name: dashtam-dev-redis
+    container_name: dashtam-api-dev-redis
     env_file:
       - ../env/.env.dev
     ports:
@@ -36,7 +36,7 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - dashtam-dev-network
+      - dashtam-api-dev-network
 
   # Main Application (Development)
   app:
@@ -44,7 +44,7 @@ services:
       context: ..
       dockerfile: docker/Dockerfile
       target: development
-    container_name: dashtam-dev-app
+    container_name: dashtam-api-dev-app
     env_file:
       - ../env/.env.dev
     expose:
@@ -62,26 +62,26 @@ services:
       redis:
         condition: service_healthy
     networks:
-      - dashtam-dev-network
+      - dashtam-api-dev-network
       - traefik-public
     labels:
       - "traefik.enable=true"
       # Main app router (HTTPS)
-      - "traefik.http.routers.dashtam-dev.rule=Host(`dashtam.local`)"
-      - "traefik.http.routers.dashtam-dev.entrypoints=websecure"
-      - "traefik.http.routers.dashtam-dev.tls=true"
-      - "traefik.http.routers.dashtam-dev.service=dashtam-dev"
-      - "traefik.http.services.dashtam-dev.loadbalancer.server.port=8000"
+      - "traefik.http.routers.dashtam-api-dev.rule=Host(`dashtam.local`)"
+      - "traefik.http.routers.dashtam-api-dev.entrypoints=websecure"
+      - "traefik.http.routers.dashtam-api-dev.tls=true"
+      - "traefik.http.routers.dashtam-api-dev.service=dashtam-api-dev"
+      - "traefik.http.services.dashtam-api-dev.loadbalancer.server.port=8000"
       # MkDocs documentation router (HTTPS)
-      - "traefik.http.routers.dashtam-dev-docs.rule=Host(`docs.dashtam.local`)"
-      - "traefik.http.routers.dashtam-dev-docs.entrypoints=websecure"
-      - "traefik.http.routers.dashtam-dev-docs.tls=true"
-      - "traefik.http.routers.dashtam-dev-docs.service=dashtam-dev-docs"
-      - "traefik.http.services.dashtam-dev-docs.loadbalancer.server.port=8001"
+      - "traefik.http.routers.dashtam-api-dev-docs.rule=Host(`docs.dashtam.local`)"
+      - "traefik.http.routers.dashtam-api-dev-docs.entrypoints=websecure"
+      - "traefik.http.routers.dashtam-api-dev-docs.tls=true"
+      - "traefik.http.routers.dashtam-api-dev-docs.service=dashtam-api-dev-docs"
+      - "traefik.http.services.dashtam-api-dev-docs.loadbalancer.server.port=8001"
     restart: unless-stopped
 
 networks:
-  dashtam-dev-network:
+  dashtam-api-dev-network:
     driver: bridge
   traefik-public:
     external: true
